# brain_agriculture

./: .gitignore  Dockerfile  Makefile  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
brain_agriculture/: app.py  database.py  models.py  schemas.py  security.py  settings.py
brain_agriculture/routers/: analytics.py  auth.py  farmers.py  users.py
migrations/: env.py
migrations/versions/: 13a61e39d2f6_create_users_table.py  a4a0b82abc69_create_users_table.py  c8575d8aa6eb_create_users_table.py  ddb020f2f7c6_create_farmers_table.py  ddb020f2f7c6_create_users_table.py
tests/: conftest.py  test_analytics.py  test_app.py  test_auth.py  test_db.py  test_farmers.py  test_security.py  test_users.py
